[gd_scene load_steps=6 format=3 uid="uid://cuud6b86l7juf"]

[ext_resource type="Script" path="res://addons/dialogic/Editor/TimelineEditor/TimelineEditor.gd" id="17"]
[ext_resource type="PackedScene" uid="uid://duj8nl0vpms35" path="res://addons/dialogic/Editor/Common/TLabel.tscn" id="21"]
[ext_resource type="Script" path="res://addons/dialogic/Editor/TimelineEditor/TimelineArea.gd" id="22"]
[ext_resource type="Theme" path="res://addons/dialogic/Editor/Theme/MainTheme.tres" id="28"]
[ext_resource type="Script" path="res://addons/dialogic/Editor/Common/FlexContainer.gd" id="29"]

[node name="TimelineEditor" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("17")

[node name="View" type="HSplitContainer" parent="."]
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("28")
split_offset = 7

[node name="TimelineArea" type="ScrollContainer" parent="View"]
offset_right = 832.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("22")

[node name="TimeLine" type="VBoxContainer" parent="View/TimelineArea"]
offset_right = 832.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="View"]
custom_minimum_size = Vector2(180, 0)
offset_left = 844.0
offset_right = 1024.0
offset_bottom = 600.0

[node name="EventContainer" type="VBoxContainer" parent="View/ScrollContainer"]
offset_right = 176.0
offset_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer6" type="HBoxContainer" parent="View/ScrollContainer/EventContainer"]
offset_right = 176.0
offset_bottom = 23.0

[node name="TLabel" parent="View/ScrollContainer/EventContainer/HBoxContainer6" instance=ExtResource("21")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1.0
offset_bottom = 23.0
text = ""
text_key = "Main Events"
mode = 0

[node name="HSeparator2" type="HSeparator" parent="View/ScrollContainer/EventContainer/HBoxContainer6"]
offset_left = 5.0
offset_right = 176.0
offset_bottom = 23.0
size_flags_horizontal = 3

[node name="FlexContainer0" type="Container" parent="View/ScrollContainer/EventContainer"]
offset_top = 27.0
offset_right = 176.0
offset_bottom = 130.0
size_flags_horizontal = 3
script = ExtResource("29")
horizontal_margin = 5.0
vertical_margin = 5.0

[node name="HBoxContainer5" type="HBoxContainer" parent="View/ScrollContainer/EventContainer"]
offset_top = 134.0
offset_right = 176.0
offset_bottom = 157.0

[node name="TLabel2" parent="View/ScrollContainer/EventContainer/HBoxContainer5" instance=ExtResource("21")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1.0
offset_bottom = 23.0
text = ""
text_key = "Logic"
mode = 0

[node name="HSeparator2" type="HSeparator" parent="View/ScrollContainer/EventContainer/HBoxContainer5"]
offset_left = 5.0
offset_right = 176.0
offset_bottom = 23.0
size_flags_horizontal = 3

[node name="FlexContainer1" type="Container" parent="View/ScrollContainer/EventContainer"]
offset_top = 161.0
offset_right = 176.0
offset_bottom = 228.0
size_flags_horizontal = 3
script = ExtResource("29")
horizontal_margin = 5.0
vertical_margin = 5.0

[node name="HBoxContainer3" type="HBoxContainer" parent="View/ScrollContainer/EventContainer"]
offset_top = 232.0
offset_right = 176.0
offset_bottom = 255.0

[node name="TLabel3" parent="View/ScrollContainer/EventContainer/HBoxContainer3" instance=ExtResource("21")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1.0
offset_bottom = 23.0
text = ""
text_key = "Timeline"
mode = 0

[node name="HSeparator2" type="HSeparator" parent="View/ScrollContainer/EventContainer/HBoxContainer3"]
offset_left = 5.0
offset_right = 176.0
offset_bottom = 23.0
size_flags_horizontal = 3

[node name="FlexContainer2" type="Container" parent="View/ScrollContainer/EventContainer"]
offset_top = 259.0
offset_right = 176.0
offset_bottom = 362.0
size_flags_horizontal = 3
script = ExtResource("29")
horizontal_margin = 5.0
vertical_margin = 5.0

[node name="HBoxContainer4" type="HBoxContainer" parent="View/ScrollContainer/EventContainer"]
offset_top = 366.0
offset_right = 176.0
offset_bottom = 389.0

[node name="TLabel4" parent="View/ScrollContainer/EventContainer/HBoxContainer4" instance=ExtResource("21")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1.0
offset_bottom = 23.0
text = ""
text_key = "Audio"
mode = 0

[node name="HSeparator2" type="HSeparator" parent="View/ScrollContainer/EventContainer/HBoxContainer4"]
offset_left = 5.0
offset_right = 176.0
offset_bottom = 23.0
size_flags_horizontal = 3

[node name="FlexContainer3" type="Container" parent="View/ScrollContainer/EventContainer"]
offset_top = 393.0
offset_right = 176.0
offset_bottom = 532.0
size_flags_horizontal = 3
script = ExtResource("29")
horizontal_margin = 5.0
vertical_margin = 5.0

[node name="HBoxContainer" type="HBoxContainer" parent="View/ScrollContainer/EventContainer"]
offset_top = 536.0
offset_right = 176.0
offset_bottom = 559.0

[node name="TLabel5" parent="View/ScrollContainer/EventContainer/HBoxContainer" instance=ExtResource("21")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1.0
offset_bottom = 23.0
text = ""
text_key = "Godot"
mode = 0

[node name="HSeparator2" type="HSeparator" parent="View/ScrollContainer/EventContainer/HBoxContainer"]
offset_left = 5.0
offset_right = 176.0
offset_bottom = 23.0
size_flags_horizontal = 3

[node name="FlexContainer4" type="Container" parent="View/ScrollContainer/EventContainer"]
offset_top = 563.0
offset_right = 176.0
offset_bottom = 666.0
size_flags_horizontal = 3
script = ExtResource("29")
horizontal_margin = 5.0
vertical_margin = 5.0

[node name="OtherContainer" type="HBoxContainer" parent="View/ScrollContainer/EventContainer"]
offset_top = 670.0
offset_right = 176.0
offset_bottom = 693.0

[node name="TLabel6" parent="View/ScrollContainer/EventContainer/OtherContainer" instance=ExtResource("21")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1.0
offset_bottom = 23.0
text = ""
text_key = "Other"
mode = 0

[node name="HSeparator2" type="HSeparator" parent="View/ScrollContainer/EventContainer/OtherContainer"]
offset_left = 5.0
offset_right = 176.0
offset_bottom = 23.0
size_flags_horizontal = 3

[node name="FlexContainer5" type="Container" parent="View/ScrollContainer/EventContainer"]
offset_top = 697.0
offset_right = 176.0
offset_bottom = 764.0
size_flags_horizontal = 3
script = ExtResource("29")
horizontal_margin = 5.0
vertical_margin = 5.0

[node name="Spacer" type="Control" parent="View/ScrollContainer/EventContainer"]
offset_top = 768.0
offset_right = 176.0
offset_bottom = 768.0
